[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-monitor"
version = "1.1.0"
description = "Daemon that monitors GitHub PRs and exposes state over D-Bus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Jan Dvorak" },
]
keywords = [
    "github",
    "pull-request",
    "monitor",
    "dbus",
    "notifications",
    "daemon",
    "asyncio",
    "linux",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "dbus-next>=0.2.3,<1",
]

[project.optional-dependencies]
indicator = [
    "gbulb>=0.6",
]

[project.urls]
Homepage = "https://github.com/dvoraj75/github-monitor"
Repository = "https://github.com/dvoraj75/github-monitor"
Documentation = "https://github.com/dvoraj75/github-monitor/tree/main/docs"
"Bug Tracker" = "https://github.com/dvoraj75/github-monitor/issues"

[project.scripts]
github-monitor = "github_monitor.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.5.1",
]

# -- ruff -------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — skip docstring enforcement for now
    "ANN",     # flake8-annotations — mypy strict handles this better
    "COM812",  # trailing comma — conflicts with ruff formatter
    "ISC001",  # implicit string concat — conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert usage is fine in tests
    "S105",    # hardcoded passwords are test fixtures, not real secrets
    "S106",    # hardcoded passwords in function args — same as above
    "S108",    # hardcoded temp file paths are fine in tests
    "PLR2004", # magic values are fine in tests
    "PLC0415", # imports inside test functions for cache access
    "SLF001",  # private member access is fine in tests
    "INP001",  # tests don't need __init__.py
    "ARG001",  # unused callback args are fine in tests (aioresponses callbacks)
    "PLR0913", # test helpers often mirror dataclass constructors
    "ERA001",  # commented-out code used as section headers in tests
]

[tool.ruff.format]
# ruff as black replacement — defaults are black-compatible

# -- mypy -------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["gi.*", "gbulb"]
ignore_missing_imports = true

# -- pytest -----------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts="-ra -v --cov=github_monitor --cov-report=term -n auto"
